--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "team-n",
   "version": "1.0.0",
   "main": "index.js",
+ 
   "license": "MIT",
   "scripts": {
     "start": "nodemon index.js --exec babel-node"
@@ -15,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.3.1",
     "nanoid": "^3.3.4",
     "passport": "^0.6.0",
@@ -27,5 +29,13 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "nodemon": "^2.0.15"
+  },
+  "_moduleAliases" :{
+    "@root" : "src",
+    "@db" : "src/db",
+    "@models" : "src/db/models",
+    "@schemas" : "src/db/schemas",
+    "@middlewares" : "src/middlewares",
+    "@services" : "src/services"
   }
 }
