--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "author": "team-n",
   "version": "1.0.0",
   "main": "index.js",
- 
   "license": "MIT",
   "scripts": {
     "start": "nodemon index.js --exec babel-node"
@@ -15,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.3.1",
@@ -30,12 +30,12 @@
     "@babel/preset-env": "^7.16.11",
     "nodemon": "^2.0.15"
   },
-  "_moduleAliases" :{
-    "@root" : "src",
-    "@db" : "src/db",
-    "@models" : "src/db/models",
-    "@schemas" : "src/db/schemas",
-    "@middlewares" : "src/middlewares",
-    "@services" : "src/services"
+  "_moduleAliases": {
+    "@root": "src",
+    "@db": "src/db",
+    "@models": "src/db/models",
+    "@schemas": "src/db/schemas",
+    "@middlewares": "src/middlewares",
+    "@services": "src/services"
   }
 }
