에러핸들링 구현중.. 체크아웃 위해 중간저장

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@schemas": "src/db/schemas",
     "@middlewares": "src/middlewares",
     "@services": "src/services",
-    "@asyncHandler": "src/utils/async-handler"
+    "@asyncHandler": "src/utils/async-handler",
+    "@error" : "src/error/errorCode"
   }
 }
